--- a/WebPro-tubes/.env
+++ b/WebPro-tubes/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:n9OdTsarVHdN9lv/dlsz00qj+9LltnW5rIR4IheWBvY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
